# mahjong-math

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yml
api/: index.html
docs/: README.md  api.md
mahjong_math/: probability.py
search/: search_index.json
