[tool.poetry]
name = "mahjong_math"
version = "0.1.0"
description = "Math problem in Mahjong"
authors = ["hktkzyx <hktkzyx@qq.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19"
scipy = "^1.5"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocstrings = "^0.15.0"
mkdocs-material = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
